--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<optgroup label="candy, cotton, feast">
 							<option value="topic 15">	candy, cotton, feast            </option>
 						</optgroup>
-					<optgroup label="career, arc"
+					<optgroup label="career, arc">
 							<option value="topic 16">	career, arc                     </option>
 						</optgroup>
 					<optgroup label="center, medical, fair">
