--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
 							<option value="topic 16">	career, arc                     </option>
 						</optgroup>
 					<optgroup label="center, medical, fair">
-							<option value="topic 17">	center, medical, fair           </option>
-						</optgroup>
-					<optgroup label="center, medical, fair">
-							<option value="topic 18">	all PoIs    </option>
+							<option value="topic 17">	all PoIs          </option>
+							<option value="topic 18">	center, medical, convention    </option>
 							<option value="topic 19">	permanente, kaiser, middle      </option>
 							<option value="topic 20">	country, flatts, rascal         </option>
 							<option value="topic 21">	fair, county                    </option>
