--- a/index.html
+++ b/index.html
@@ -21,42 +21,42 @@
 					<option value="select_tab">Please select</option>
 
 					<optgroup label="airport, international, flight">	
-							<option value="topic 0">	airport, international, flight	</option>
+							<option value="topic 0">	all PoIs in the topic	</option>
 						</optgroup>
 					<optgroup label="apple, picking, iphone">			
 							<option value="topic 1">	apple, picking, iphone			</option>
 						</optgroup>
 					<optgroup label="art, street, fashion">		
-							<option value="topic 2">	all PoIs 			</option>
+							<option value="topic 2">	all PoIs in the topic 			</option>
 							<option value="topic 3">	art, street, photography        </option>
 							<option value="topic 4">	fashion, style, model           </option>
 							<option value="topic 5">	design, interior, drawing       </option>
 							<option value="topic 6">	shoes, shoe                     </option>
 						</optgroup>
 					<optgroup label="award, awards, movie">
-							<option value="topic 7">	all PoIs           </option>
+							<option value="topic 7">	all PoIs in the topic           </option>
 							<option value="topic 8">	movie, film, screening          </option>
 							<option value="topic 9">	award, awards, repost           </option>
 						</optgroup>
 					<optgroup label="bear, bears, mary">
-							<option value="topic 10">	bear, bears, mary               </option>
+							<option value="topic 10">	all PoIs in the topic               </option>
 						</optgroup>
 					<optgroup label="bike, ride, bikes ">
-							<option value="topic 11">	all PoIs               </option>
+							<option value="topic 11">	all PoIs in the topic               </option>
 							<option value="topic 12">	bike, ride, bikes               </option>
 							<option value="topic 13">	race, racing, endurance         </option>
 						</optgroup>
 					<optgroup label="calm, storm, warning">
-							<option value="topic 14">	calm, storm, warning            </option>
+							<option value="topic 14">	all PoIs in the topic            </option>
 						</optgroup>
 					<optgroup label="candy, cotton, feast">
-							<option value="topic 15">	candy, cotton, feast            </option>
+							<option value="topic 15">	all PoIs in the topic           </option>
 						</optgroup>
 					<optgroup label="career, arc">
-							<option value="topic 16">	career, arc                     </option>
+							<option value="topic 16">	all PoIs in the topic                     </option>
 						</optgroup>
 					<optgroup label="center, medical, fair">
-							<option value="topic 17">	all PoIs          </option>
+							<option value="topic 17">	all PoIs in the topic          </option>
 							<option value="topic 18">	center, medical, convention    </option>
 							<option value="topic 19">	permanente, kaiser, middle      </option>
 							<option value="topic 20">	country, flatts, rascal         </option>
@@ -68,63 +68,63 @@
 							<option value="topic 24">	alpha, phi, delta               </option>
 						</optgroup>
 					<optgroup label="cosplay, comic, star">
-							<option value="topic 25">	all PoIs            </option>
+							<option value="topic 25">	all PoIs in the topic            </option>
 							<option value="topic 26">	book, books, iron               </option>
 							<option value="topic 27">	cosplay, comic, star            </option>
 						</optgroup>
 					<optgroup label="customer, sale, store">
-							<option value="topic 28">	customer, sale, store           </option>
+							<option value="topic 28">	all PoIs in the topic           </option>
 						</optgroup>
 					<optgroup label="fitness, goals, squad">
-							<option value="topic 29">	all PoIs          </option>
+							<option value="topic 29">	all PoIs in the topic          </option>
 							<option value="topic 30">	fitness, fit, workout           </option>
 							<option value="topic 31">	dream, true, living             </option>
 							<option value="topic 32">	goals, squad                    </option>
 						</optgroup>
 					<optgroup label="food, beer, lunch">
-							<option value="topic 33">	all PoIs              </option>
+							<option value="topic 33">	all PoIs in the topic              </option>
 							<option value="topic 34">	food, beer, lunch               </option>
 							<option value="topic 35">	wine, winery, tasting           </option>
 						</optgroup>
 					<optgroup label="football, win, stadium">
-							<option value="topic 36">	all PoIs          </option>
+							<option value="topic 36">	all PoIs in the topic         </option>
 							<option value="topic 37">	football, win, stadium          </option>
 							<option value="topic 38">	mlb, ballpark, ballgame         </option>
 							<option value="topic 39">	soccer, fc, match               </option>
 							<option value="topic 40">	seat, seats, row                </option>
 						</optgroup>
 					<optgroup label="garden, gardens, flowers">
-							<option value="topic 41">	garden, gardens, flowers        </option>
+							<option value="topic 41">	all PoIs in the topic        </option>
 						</optgroup>
 					<optgroup label="golf, club, waves">
-							<option value="topic 42">	all PoIs              </option>
+							<option value="topic 42">	all PoIs in the topic              </option>
 							<option value="topic 43">	golf, club, tournament          </option>
 							<option value="topic 44">	waves, surfing, vsco            </option>
 						</optgroup>
-					<optgroup label="hot, tub, brice">
-							<option value="topic 45">	hot, tub, brice                 </option>
-						</optgroup>
+					<!-- <optgroup label="hot, tub, brice">
+							<option value="topic 45">	all PoIs in the topic                 </option>
+						</optgroup> 
 					<optgroup label="hyatt, regency">
-							<option value="topic 46">	hyatt, regency                  </option>
-						</optgroup>
+							<option value="topic 46">	all PoIs in the topic                 </option>
+						</optgroup> -->
 					<optgroup label="incident, cleared, construction">
-							<option value="topic 47">	all PoIs </option>
+							<option value="topic 47">	all PoIs in the topic </option>
 							<option value="topic 48">	incident, cleared, construction </option>
 							<option value="topic 49">	estate, tour, listing           </option>
 							<option value="topic 50">	train, station, subway          </option>
 						</optgroup>
 					<optgroup label="insta, pic, instagram">
-							<option value="topic 51">	all PoIs          </option>
+							<option value="topic 51">	all PoIs in the topic          </option>
 							<option value="topic 52">	insta, pic, instagram           </option>
 							<option value="topic 53">	post, late                      </option>
 						</optgroup>
 					<optgroup label="jonas, nick, church">
-							<option value="topic 54">	all PoIs            </option>
+							<option value="topic 54">	all PoIs in the topic            </option>
 							<option value="topic 55">	church, ministry, wwe           </option>
 							<option value="topic 56">	jonas, nick, iglesias           </option>
 						</optgroup>
 					<optgroup label="kingdom, magic, halloween">
-							<option value="topic 57">	kingdom, magic, halloween       </option>
+							<option value="topic 57">	all PoIs in the topic       </option>
 						</optgroup>			
 					<optgroup label="music, awesome, amazing">
 							<option value="topic 58">	all PoIs         </option>
@@ -142,7 +142,7 @@
 							<option value="topic 70">	celebrate, celebrating          </option>
 						</optgroup>
 					<optgroup label="president, obama, steelers">
-							<option value="topic 71">	all PoIs     </option>
+							<option value="topic 71">	all PoIs in the topic     </option>
 							<option value="topic 72">	tequila, mezcal, hanley         </option>
 							<option value="topic 73">	steelers, steeltown, tbit       </option>
 							<option value="topic 74">	president, obama, clinton       </option>
@@ -154,18 +154,18 @@
 							<option value="topic 78">	birds, bird                     </option>
 						</optgroup>
 					<optgroup label="rip, peace, remember">
-							<option value="topic 79">	rip, peace, remember            </option>
+							<option value="topic 79">	all PoIs in the topic            </option>
 						</optgroup>
 					<optgroup label="sunday, funday, saturday">
-							<option value="topic 80">	sunday, funday, saturday        </option>
+							<option value="topic 80">	all PoIs in the topic        </option>
 						</optgroup>
 					<optgroup label="trip, usa, fall">
-							<option value="topic 81">	trip, usa, fall                 </option>
+							<option value="topic 81">	all PoIs in the topic           </option>
 							<option value="topic 82">	fall, nature, sky               </option>
 							<option value="topic 83">	trip, usa, road                 </option>
 						</optgroup>
 					<optgroup label="trnd, trend, trends">
-							<option value="topic 84">	trnd, trend, trends             </option>
+							<option value="topic 84">	all PoIs in the topic           </option>
 						</optgroup>
 				</select>
 			  </div>
